// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`search with keyword 1`] = `
Object {
  "data": Array [
    Object {
      "createdAt": "2018-06-20T00:30:00.000Z",
      "description": "dragonfruit",
      "fingerprint": Object {
        "data": Array [
          181,
          51,
          34,
          207,
          92,
          157,
          148,
          111,
          207,
          121,
          110,
          54,
          202,
          90,
          140,
          63,
          146,
          18,
          65,
          204,
          14,
          52,
          86,
          92,
          20,
          113,
          215,
          172,
          20,
          36,
          3,
          175,
        ],
        "type": "Buffer",
      },
      "height": 150,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          175,
          160,
          108,
          75,
          20,
          216,
          166,
          134,
          156,
          11,
          157,
          117,
          7,
          241,
          69,
          52,
          144,
          230,
          235,
          169,
          69,
          82,
          30,
          143,
          114,
          89,
          101,
          39,
          88,
          13,
          156,
          23,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          60,
          237,
          70,
          20,
          238,
          200,
          103,
          143,
          212,
          172,
          131,
          192,
          124,
          196,
          47,
          23,
          191,
          127,
          126,
          144,
          113,
          58,
          25,
          237,
          159,
          29,
          75,
          143,
          239,
          183,
          23,
          69,
        ],
        "type": "Buffer",
      },
      "license": "cc-by-nd",
      "like": Object {
        "count": 40,
      },
      "tags": Array [
        Object {
          "name": "raspberry",
        },
        Object {
          "name": "fruit",
        },
      ],
      "updatedAt": "2018-06-20T00:30:00.000Z",
      "url": "http://localhost:8080/ipfs/QmaADwDYHmkJrYcPyVF3YWFkuwYWB1VyhEtdefn1TpHowt",
      "user": Object {
        "displayName": "Alexandre",
        "likecoinId": "likecoin_id_1",
      },
      "wallet": "address 1",
      "width": 200,
    },
    Object {
      "createdAt": "2018-06-20T01:20:00.000Z",
      "description": "jackfruit",
      "fingerprint": Object {
        "data": Array [
          89,
          219,
          38,
          73,
          216,
          77,
          30,
          29,
          27,
          138,
          20,
          223,
          72,
          222,
          252,
          48,
          23,
          162,
          28,
          182,
          60,
          240,
          156,
          29,
          85,
          30,
          151,
          106,
          38,
          130,
          65,
          87,
        ],
        "type": "Buffer",
      },
      "height": 200,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          141,
          93,
          199,
          119,
          131,
          114,
          61,
          198,
          99,
          241,
          41,
          186,
          240,
          190,
          220,
          247,
          75,
          139,
          72,
          82,
          204,
          113,
          246,
          199,
          98,
          255,
          221,
          40,
          36,
          90,
          208,
          204,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          237,
          3,
          130,
          190,
          140,
          70,
          38,
          64,
          195,
          155,
          5,
          216,
          217,
          212,
          124,
          196,
          227,
          84,
          145,
          132,
          138,
          117,
          197,
          33,
          71,
          75,
          87,
          136,
          52,
          219,
          254,
          44,
          10,
        ],
        "type": "Buffer",
      },
      "license": "cc0",
      "like": Object {
        "count": 30,
      },
      "tags": Array [
        Object {
          "name": "fruit",
        },
        Object {
          "name": "dragonfruit",
        },
        Object {
          "name": "berry",
        },
      ],
      "updatedAt": "2018-06-20T01:20:00.000Z",
      "url": "http://localhost:8080/ipfs/QmXrV8hzo4NnfmW9StWJAn2fzVyA2BhtV94LyYs9pKkaNo",
      "user": Object {
        "displayName": "Sébastien",
        "likecoinId": "likecoin_id_3",
      },
      "wallet": "address 3",
      "width": 150,
    },
    Object {
      "createdAt": "2018-06-20T01:30:00.000Z",
      "description": "kiwifruit",
      "fingerprint": Object {
        "data": Array [
          179,
          69,
          203,
          194,
          57,
          254,
          176,
          17,
          251,
          36,
          100,
          11,
          117,
          219,
          55,
          228,
          163,
          41,
          247,
          72,
          95,
          93,
          83,
          49,
          195,
          254,
          219,
          189,
          116,
          181,
          72,
          100,
        ],
        "type": "Buffer",
      },
      "height": 200,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          109,
          192,
          144,
          128,
          230,
          178,
          234,
          151,
          149,
          68,
          65,
          122,
          192,
          4,
          30,
          28,
          162,
          239,
          106,
          21,
          154,
          69,
          47,
          177,
          158,
          163,
          82,
          32,
          240,
          176,
          255,
          78,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          207,
          80,
          159,
          43,
          30,
          46,
          253,
          24,
          193,
          4,
          108,
          13,
          98,
          236,
          49,
          140,
          72,
          133,
          65,
          37,
          80,
          127,
          114,
          141,
          67,
          230,
          244,
          178,
          34,
          230,
          204,
          14,
        ],
        "type": "Buffer",
      },
      "license": "cc-by",
      "like": Object {
        "count": 10,
      },
      "tags": Array [
        Object {
          "name": "orange",
        },
        Object {
          "name": "fruit",
        },
      ],
      "updatedAt": "2018-06-20T01:30:00.000Z",
      "url": "http://localhost:8080/ipfs/QmVj5TG7RbzgVEgEuECoqZ1cucvYwPasy6YduAs2Shmsv5",
      "user": Object {
        "displayName": "Alexandre",
        "likecoinId": "likecoin_id_1",
      },
      "wallet": "address 1",
      "width": 150,
    },
  ],
  "error": false,
  "pageInfo": Object {
    "endCursor": null,
    "hasNextPage": false,
    "hasPrevPage": false,
    "next": null,
    "prev": null,
    "startCursor": null,
    "totalCount": 3,
  },
}
`;

exports[`search with pagination 1`] = `
Object {
  "data": Array [
    Object {
      "createdAt": "2018-06-20T00:20:00.000Z",
      "description": "cherry",
      "fingerprint": Object {
        "data": Array [
          68,
          58,
          18,
          172,
          160,
          54,
          34,
          202,
          162,
          135,
          219,
          126,
          143,
          201,
          9,
          180,
          119,
          135,
          249,
          151,
          39,
          200,
          210,
          26,
          21,
          208,
          159,
          34,
          234,
          32,
          141,
          154,
        ],
        "type": "Buffer",
      },
      "height": 150,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          212,
          13,
          8,
          246,
          140,
          225,
          69,
          235,
          109,
          135,
          52,
          6,
          210,
          178,
          197,
          7,
          104,
          103,
          52,
          109,
          189,
          160,
          136,
          17,
          171,
          88,
          157,
          149,
          63,
          237,
          70,
          224,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          199,
          217,
          120,
          135,
          56,
          90,
          42,
          245,
          189,
          14,
          128,
          26,
          74,
          111,
          73,
          119,
          52,
          29,
          137,
          190,
          59,
          99,
          200,
          8,
          17,
          151,
          157,
          151,
          246,
          239,
          21,
          135,
        ],
        "type": "Buffer",
      },
      "license": "cc-by-sa",
      "like": Object {
        "count": 20,
      },
      "tags": Array [
        Object {
          "name": "fruit",
        },
      ],
      "updatedAt": "2018-06-20T00:20:00.000Z",
      "url": "http://localhost:8080/ipfs/QmccQfo6yWXTYL5PVFxXjmnZmAANLS4hgfbrtmD3dUxWaB",
      "user": Object {
        "displayName": "Sébastien",
        "likecoinId": "likecoin_id_3",
      },
      "wallet": "address 3",
      "width": 200,
    },
    Object {
      "createdAt": "2018-06-20T00:10:00.000Z",
      "description": "banana",
      "fingerprint": Object {
        "data": Array [
          83,
          119,
          119,
          189,
          122,
          95,
          196,
          237,
          145,
          167,
          78,
          246,
          250,
          125,
          140,
          38,
          220,
          35,
          133,
          175,
          144,
          169,
          228,
          140,
          4,
          130,
          164,
          178,
          125,
          137,
          27,
          63,
        ],
        "type": "Buffer",
      },
      "height": 150,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          138,
          156,
          193,
          23,
          107,
          120,
          204,
          26,
          6,
          162,
          104,
          245,
          200,
          136,
          60,
          86,
          21,
          201,
          202,
          29,
          215,
          236,
          221,
          201,
          188,
          145,
          194,
          88,
          231,
          224,
          64,
          60,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          118,
          129,
          128,
          216,
          95,
          221,
          118,
          97,
          7,
          21,
          0,
          79,
          204,
          99,
          106,
          170,
          193,
          18,
          168,
          10,
          27,
          181,
          172,
          105,
          130,
          211,
          165,
          146,
          130,
          253,
          216,
          237,
        ],
        "type": "Buffer",
      },
      "license": "cc-by",
      "like": Object {
        "count": 10,
      },
      "tags": Array [
        Object {
          "name": "fruit",
        },
      ],
      "updatedAt": "2018-06-20T00:10:00.000Z",
      "url": "http://localhost:8080/ipfs/QmXfjc79upANgieA3CsaDg5bSJLGmdiHFJ4YRPtKM5ZB5m",
      "user": Object {
        "displayName": "Pooya",
        "likecoinId": "likecoin_id_2",
      },
      "wallet": "address 2",
      "width": 200,
    },
    Object {
      "createdAt": "2018-06-20T00:00:00.000Z",
      "description": "avocado",
      "fingerprint": Object {
        "data": Array [
          35,
          122,
          66,
          155,
          220,
          197,
          105,
          47,
          136,
          135,
          201,
          47,
          134,
          152,
          229,
          18,
          143,
          194,
          139,
          71,
          141,
          188,
          160,
          57,
          94,
          212,
          87,
          195,
          244,
          84,
          148,
          134,
        ],
        "type": "Buffer",
      },
      "height": 150,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          249,
          83,
          215,
          220,
          151,
          195,
          86,
          134,
          174,
          153,
          52,
          218,
          148,
          108,
          207,
          215,
          193,
          12,
          176,
          223,
          156,
          40,
          136,
          84,
          176,
          229,
          113,
          203,
          60,
          11,
          227,
          17,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          238,
          23,
          106,
          29,
          179,
          135,
          73,
          46,
          61,
          176,
          137,
          202,
          222,
          163,
          184,
          226,
          250,
          81,
          40,
          39,
          22,
          245,
          81,
          65,
          99,
          15,
          147,
          143,
          177,
          24,
          160,
          60,
        ],
        "type": "Buffer",
      },
      "license": "cc0",
      "like": Object {
        "count": 0,
      },
      "tags": Array [
        Object {
          "name": "fruit",
        },
      ],
      "updatedAt": "2018-06-20T00:00:00.000Z",
      "url": "http://localhost:8080/ipfs/Qmf7vNrdmATNyVsHc2znm8udUmkXij9sHEXDf8VKXFGzME",
      "user": Object {
        "displayName": "Alexandre",
        "likecoinId": "likecoin_id_1",
      },
      "wallet": "address 1",
      "width": 200,
    },
  ],
  "error": false,
  "pageInfo": Object {
    "endCursor": null,
    "hasNextPage": false,
    "hasPrevPage": true,
    "next": null,
    "prev": "http://0.0.0.0:3000/api/search?q=%23fruit&before=eyJvZmZzZXQiOjE1LCJxIjoiI2ZydWl0In0",
    "startCursor": "eyJvZmZzZXQiOjE1LCJxIjoiI2ZydWl0In0",
    "totalCount": 18,
  },
}
`;

exports[`search with tag 1`] = `
Object {
  "data": Array [
    Object {
      "createdAt": "2018-06-20T02:40:00.000Z",
      "description": "raspberry",
      "fingerprint": Object {
        "data": Array [
          49,
          111,
          17,
          92,
          161,
          250,
          111,
          192,
          97,
          103,
          21,
          147,
          229,
          40,
          110,
          100,
          45,
          157,
          162,
          224,
          7,
          122,
          102,
          127,
          212,
          104,
          25,
          164,
          159,
          191,
          133,
          208,
        ],
        "type": "Buffer",
      },
      "height": 200,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          201,
          32,
          66,
          145,
          220,
          108,
          49,
          199,
          118,
          84,
          184,
          69,
          166,
          172,
          234,
          247,
          94,
          182,
          165,
          98,
          130,
          78,
          217,
          17,
          212,
          55,
          207,
          82,
          75,
          199,
          197,
          196,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          99,
          124,
          54,
          222,
          116,
          43,
          173,
          2,
          33,
          3,
          158,
          20,
          247,
          254,
          217,
          176,
          18,
          2,
          176,
          66,
          49,
          120,
          197,
          167,
          97,
          129,
          36,
          147,
          111,
          17,
          221,
          45,
        ],
        "type": "Buffer",
      },
      "license": "cc0",
      "like": Object {
        "count": 50,
      },
      "tags": Array [
        Object {
          "name": "fruit",
        },
      ],
      "updatedAt": "2018-06-20T02:40:00.000Z",
      "url": "http://localhost:8080/ipfs/QmbsmBqmrT8j2BBPwFQZq7JXQQcTkm47qmXEZHGJUy6vsM",
      "user": Object {
        "displayName": "Pooya",
        "likecoinId": "likecoin_id_2",
      },
      "wallet": "address 2",
      "width": 200,
    },
    Object {
      "createdAt": "2018-06-20T01:40:00.000Z",
      "description": "lychee",
      "fingerprint": Object {
        "data": Array [
          107,
          38,
          44,
          200,
          226,
          85,
          46,
          63,
          36,
          87,
          175,
          38,
          229,
          178,
          77,
          113,
          232,
          226,
          242,
          141,
          89,
          75,
          30,
          70,
          168,
          148,
          188,
          96,
          23,
          84,
          38,
          154,
        ],
        "type": "Buffer",
      },
      "height": 200,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          91,
          21,
          146,
          49,
          12,
          50,
          139,
          175,
          191,
          51,
          138,
          252,
          239,
          70,
          234,
          62,
          98,
          121,
          192,
          247,
          33,
          171,
          53,
          210,
          224,
          146,
          228,
          52,
          121,
          134,
          72,
          246,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          126,
          243,
          236,
          68,
          205,
          76,
          7,
          138,
          161,
          117,
          157,
          238,
          251,
          155,
          151,
          211,
          137,
          94,
          103,
          86,
          72,
          71,
          239,
          34,
          30,
          5,
          229,
          238,
          28,
          232,
          109,
          8,
        ],
        "type": "Buffer",
      },
      "license": "cc-by-sa",
      "like": Object {
        "count": 50,
      },
      "tags": Array [
        Object {
          "name": "fruit",
        },
      ],
      "updatedAt": "2018-06-20T01:40:00.000Z",
      "url": "http://localhost:8080/ipfs/QmUUCtS743JyBzehEBDkfbagTZuwYWoa3VcnJQoe7pw55X",
      "user": Object {
        "displayName": "Pooya",
        "likecoinId": "likecoin_id_2",
      },
      "wallet": "address 2",
      "width": 150,
    },
    Object {
      "createdAt": "2018-06-20T00:40:00.000Z",
      "description": "elderberry",
      "fingerprint": Object {
        "data": Array [
          245,
          218,
          245,
          151,
          0,
          75,
          178,
          102,
          0,
          235,
          64,
          225,
          231,
          119,
          22,
          242,
          108,
          91,
          116,
          141,
          39,
          128,
          92,
          17,
          67,
          46,
          61,
          169,
          79,
          197,
          4,
          189,
        ],
        "type": "Buffer",
      },
      "height": 150,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          7,
          245,
          95,
          200,
          181,
          237,
          176,
          85,
          119,
          233,
          72,
          211,
          150,
          239,
          26,
          84,
          182,
          151,
          95,
          174,
          63,
          173,
          63,
          133,
          187,
          70,
          147,
          22,
          237,
          117,
          248,
          228,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          251,
          79,
          17,
          216,
          37,
          10,
          203,
          93,
          69,
          71,
          57,
          93,
          34,
          196,
          77,
          186,
          90,
          96,
          8,
          231,
          236,
          231,
          82,
          231,
          31,
          211,
          61,
          47,
          246,
          253,
          31,
          44,
        ],
        "type": "Buffer",
      },
      "license": "cc0",
      "like": Object {
        "count": 50,
      },
      "tags": Array [
        Object {
          "name": "fruit",
        },
      ],
      "updatedAt": "2018-06-20T00:40:00.000Z",
      "url": "http://localhost:8080/ipfs/QmNsiaDk2KyE2zFBjJPJEN4RW2qYvBFZPH59ieZd6Kvznf",
      "user": Object {
        "displayName": "Pooya",
        "likecoinId": "likecoin_id_2",
      },
      "wallet": "address 2",
      "width": 200,
    },
    Object {
      "createdAt": "2018-06-20T01:10:00.000Z",
      "description": "honeyberry",
      "fingerprint": Object {
        "data": Array [
          44,
          203,
          220,
          194,
          70,
          177,
          210,
          144,
          94,
          102,
          185,
          177,
          145,
          121,
          87,
          229,
          218,
          58,
          85,
          91,
          75,
          163,
          38,
          95,
          12,
          72,
          24,
          16,
          122,
          250,
          5,
          159,
        ],
        "type": "Buffer",
      },
      "height": 200,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          23,
          98,
          190,
          237,
          130,
          226,
          12,
          164,
          39,
          66,
          133,
          163,
          105,
          122,
          118,
          186,
          10,
          200,
          244,
          21,
          169,
          102,
          197,
          152,
          234,
          191,
          74,
          209,
          38,
          161,
          213,
          3,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          207,
          82,
          189,
          44,
          10,
          124,
          174,
          219,
          42,
          22,
          66,
          72,
          127,
          77,
          10,
          108,
          72,
          196,
          242,
          117,
          148,
          108,
          240,
          82,
          49,
          243,
          8,
          62,
          86,
          9,
          123,
          160,
        ],
        "type": "Buffer",
      },
      "license": "cc-by-nd",
      "like": Object {
        "count": 40,
      },
      "tags": Array [
        Object {
          "name": "fruit",
        },
      ],
      "updatedAt": "2018-06-20T01:10:00.000Z",
      "url": "http://localhost:8080/ipfs/QmPuwRC1aihWD4Cap2yYqZFQhArdfSRPfuUjVn4LKT9rtr",
      "user": Object {
        "displayName": "Pooya",
        "likecoinId": "likecoin_id_2",
      },
      "wallet": "address 2",
      "width": 150,
    },
    Object {
      "createdAt": "2018-06-20T01:00:00.000Z",
      "description": "grape",
      "fingerprint": Object {
        "data": Array [
          64,
          197,
          223,
          251,
          203,
          122,
          42,
          53,
          66,
          48,
          3,
          28,
          119,
          115,
          247,
          72,
          160,
          25,
          117,
          142,
          240,
          37,
          151,
          182,
          168,
          252,
          109,
          71,
          170,
          248,
          110,
          37,
        ],
        "type": "Buffer",
      },
      "height": 200,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          30,
          56,
          156,
          118,
          255,
          235,
          77,
          148,
          250,
          112,
          187,
          231,
          195,
          233,
          29,
          33,
          30,
          38,
          225,
          99,
          135,
          155,
          206,
          109,
          178,
          143,
          230,
          252,
          251,
          122,
          134,
          171,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          91,
          147,
          147,
          78,
          9,
          42,
          95,
          218,
          69,
          155,
          227,
          189,
          242,
          41,
          187,
          207,
          18,
          34,
          132,
          136,
          244,
          242,
          117,
          114,
          184,
          65,
          244,
          76,
          207,
          137,
          103,
          114,
        ],
        "type": "Buffer",
      },
      "license": "cc-by-sa",
      "like": Object {
        "count": 40,
      },
      "tags": Array [
        Object {
          "name": "fruit",
        },
      ],
      "updatedAt": "2018-06-20T01:00:00.000Z",
      "url": "http://localhost:8080/ipfs/QmQNd1Q8zXEogjWdzLYzKjhKViBJ9aTAun4WaALCto5Bai",
      "user": Object {
        "displayName": "Alexandre",
        "likecoinId": "likecoin_id_1",
      },
      "wallet": "address 1",
      "width": 150,
    },
    Object {
      "createdAt": "2018-06-20T00:30:00.000Z",
      "description": "dragonfruit",
      "fingerprint": Object {
        "data": Array [
          181,
          51,
          34,
          207,
          92,
          157,
          148,
          111,
          207,
          121,
          110,
          54,
          202,
          90,
          140,
          63,
          146,
          18,
          65,
          204,
          14,
          52,
          86,
          92,
          20,
          113,
          215,
          172,
          20,
          36,
          3,
          175,
        ],
        "type": "Buffer",
      },
      "height": 150,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          175,
          160,
          108,
          75,
          20,
          216,
          166,
          134,
          156,
          11,
          157,
          117,
          7,
          241,
          69,
          52,
          144,
          230,
          235,
          169,
          69,
          82,
          30,
          143,
          114,
          89,
          101,
          39,
          88,
          13,
          156,
          23,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          60,
          237,
          70,
          20,
          238,
          200,
          103,
          143,
          212,
          172,
          131,
          192,
          124,
          196,
          47,
          23,
          191,
          127,
          126,
          144,
          113,
          58,
          25,
          237,
          159,
          29,
          75,
          143,
          239,
          183,
          23,
          69,
        ],
        "type": "Buffer",
      },
      "license": "cc-by-nd",
      "like": Object {
        "count": 40,
      },
      "tags": Array [
        Object {
          "name": "fruit",
        },
      ],
      "updatedAt": "2018-06-20T00:30:00.000Z",
      "url": "http://localhost:8080/ipfs/QmaADwDYHmkJrYcPyVF3YWFkuwYWB1VyhEtdefn1TpHowt",
      "user": Object {
        "displayName": "Alexandre",
        "likecoinId": "likecoin_id_1",
      },
      "wallet": "address 1",
      "width": 200,
    },
    Object {
      "createdAt": "2018-06-20T01:50:00.000Z",
      "description": "mango",
      "fingerprint": Object {
        "data": Array [
          49,
          100,
          231,
          94,
          242,
          239,
          75,
          38,
          9,
          253,
          144,
          45,
          116,
          139,
          9,
          115,
          150,
          147,
          110,
          178,
          165,
          202,
          10,
          54,
          241,
          230,
          162,
          200,
          81,
          133,
          122,
          25,
        ],
        "type": "Buffer",
      },
      "height": 200,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          135,
          63,
          236,
          91,
          172,
          146,
          168,
          178,
          202,
          94,
          236,
          154,
          241,
          88,
          32,
          1,
          214,
          153,
          214,
          152,
          126,
          95,
          83,
          153,
          127,
          30,
          80,
          45,
          236,
          25,
          194,
          0,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          249,
          192,
          136,
          87,
          2,
          252,
          182,
          64,
          85,
          187,
          236,
          143,
          209,
          105,
          134,
          76,
          69,
          235,
          211,
          212,
          210,
          75,
          242,
          23,
          137,
          127,
          102,
          224,
          255,
          97,
          0,
          133,
        ],
        "type": "Buffer",
      },
      "license": "cc-by-nd",
      "like": Object {
        "count": 30,
      },
      "tags": Array [
        Object {
          "name": "kiwifruit",
        },
        Object {
          "name": "fruit",
        },
      ],
      "updatedAt": "2018-06-20T01:50:00.000Z",
      "url": "http://localhost:8080/ipfs/QmXScHMburuanQNekLAbGFF27ChAv6M9mAnvrLy2embkj1",
      "user": Object {
        "displayName": "Sébastien",
        "likecoinId": "likecoin_id_3",
      },
      "wallet": "address 3",
      "width": 150,
    },
    Object {
      "createdAt": "2018-06-20T01:20:00.000Z",
      "description": "jackfruit",
      "fingerprint": Object {
        "data": Array [
          89,
          219,
          38,
          73,
          216,
          77,
          30,
          29,
          27,
          138,
          20,
          223,
          72,
          222,
          252,
          48,
          23,
          162,
          28,
          182,
          60,
          240,
          156,
          29,
          85,
          30,
          151,
          106,
          38,
          130,
          65,
          87,
        ],
        "type": "Buffer",
      },
      "height": 200,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          141,
          93,
          199,
          119,
          131,
          114,
          61,
          198,
          99,
          241,
          41,
          186,
          240,
          190,
          220,
          247,
          75,
          139,
          72,
          82,
          204,
          113,
          246,
          199,
          98,
          255,
          221,
          40,
          36,
          90,
          208,
          204,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          237,
          3,
          130,
          190,
          140,
          70,
          38,
          64,
          195,
          155,
          5,
          216,
          217,
          212,
          124,
          196,
          227,
          84,
          145,
          132,
          138,
          117,
          197,
          33,
          71,
          75,
          87,
          136,
          52,
          219,
          254,
          44,
          10,
        ],
        "type": "Buffer",
      },
      "license": "cc0",
      "like": Object {
        "count": 30,
      },
      "tags": Array [
        Object {
          "name": "dragonfruit",
        },
        Object {
          "name": "fruit",
        },
      ],
      "updatedAt": "2018-06-20T01:20:00.000Z",
      "url": "http://localhost:8080/ipfs/QmXrV8hzo4NnfmW9StWJAn2fzVyA2BhtV94LyYs9pKkaNo",
      "user": Object {
        "displayName": "Sébastien",
        "likecoinId": "likecoin_id_3",
      },
      "wallet": "address 3",
      "width": 150,
    },
    Object {
      "createdAt": "2018-06-20T00:50:00.000Z",
      "description": "feijoa",
      "fingerprint": Object {
        "data": Array [
          203,
          198,
          99,
          26,
          0,
          91,
          16,
          220,
          217,
          244,
          92,
          134,
          224,
          218,
          169,
          169,
          83,
          25,
          229,
          104,
          216,
          91,
          253,
          87,
          73,
          208,
          16,
          206,
          225,
          240,
          94,
          207,
        ],
        "type": "Buffer",
      },
      "height": 150,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          126,
          4,
          89,
          128,
          55,
          137,
          44,
          174,
          92,
          74,
          211,
          40,
          26,
          107,
          181,
          201,
          233,
          150,
          46,
          68,
          193,
          52,
          106,
          118,
          7,
          185,
          135,
          139,
          122,
          176,
          205,
          148,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          57,
          36,
          155,
          229,
          218,
          28,
          111,
          243,
          242,
          210,
          231,
          224,
          39,
          218,
          15,
          137,
          101,
          211,
          145,
          154,
          17,
          223,
          223,
          230,
          6,
          169,
          228,
          8,
          216,
          92,
          200,
          20,
        ],
        "type": "Buffer",
      },
      "license": "cc-by",
      "like": Object {
        "count": 30,
      },
      "tags": Array [
        Object {
          "name": "fruit",
        },
      ],
      "updatedAt": "2018-06-20T00:50:00.000Z",
      "url": "http://localhost:8080/ipfs/QmWpZvgF4j9RuoPrj7o7xs6f8akDm9iGXBnQiUCqQw95xF",
      "user": Object {
        "displayName": "Sébastien",
        "likecoinId": "likecoin_id_3",
      },
      "wallet": "address 3",
      "width": 200,
    },
    Object {
      "createdAt": "2018-06-20T02:50:00.000Z",
      "description": "strawberry",
      "fingerprint": Object {
        "data": Array [
          1,
          231,
          54,
          141,
          145,
          251,
          14,
          128,
          74,
          176,
          237,
          125,
          12,
          151,
          235,
          81,
          177,
          172,
          177,
          117,
          176,
          220,
          90,
          231,
          130,
          3,
          42,
          146,
          68,
          190,
          245,
          68,
        ],
        "type": "Buffer",
      },
      "height": 200,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          44,
          106,
          65,
          212,
          242,
          85,
          243,
          233,
          110,
          192,
          198,
          37,
          159,
          94,
          77,
          121,
          29,
          4,
          185,
          231,
          171,
          10,
          98,
          220,
          213,
          18,
          11,
          84,
          161,
          63,
          230,
          208,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          237,
          205,
          195,
          22,
          35,
          181,
          12,
          140,
          17,
          72,
          180,
          158,
          116,
          169,
          135,
          172,
          51,
          8,
          85,
          150,
          231,
          187,
          118,
          222,
          87,
          195,
          129,
          135,
          51,
          42,
          78,
          207,
        ],
        "type": "Buffer",
      },
      "license": "cc-by",
      "like": Object {
        "count": 20,
      },
      "tags": Array [
        Object {
          "name": "fruit",
        },
      ],
      "updatedAt": "2018-06-20T02:50:00.000Z",
      "url": "http://localhost:8080/ipfs/QmRL2d4hcrkiCiucB1rd6mQkAXPc3fEqGJaNpXeprPo7aF",
      "user": Object {
        "displayName": "Sébastien",
        "likecoinId": "likecoin_id_3",
      },
      "wallet": "address 3",
      "width": 200,
    },
    Object {
      "createdAt": "2018-06-20T02:10:00.000Z",
      "description": "orange",
      "fingerprint": Object {
        "data": Array [
          49,
          236,
          76,
          254,
          21,
          248,
          0,
          132,
          66,
          201,
          254,
          17,
          247,
          232,
          87,
          3,
          224,
          171,
          27,
          76,
          119,
          134,
          30,
          45,
          29,
          108,
          88,
          3,
          44,
          240,
          4,
          77,
        ],
        "type": "Buffer",
      },
      "height": 200,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          145,
          109,
          62,
          184,
          54,
          41,
          228,
          96,
          186,
          206,
          159,
          19,
          232,
          3,
          145,
          191,
          243,
          14,
          159,
          63,
          33,
          173,
          67,
          193,
          51,
          30,
          43,
          39,
          153,
          84,
          168,
          70,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          120,
          151,
          86,
          45,
          191,
          125,
          89,
          229,
          242,
          189,
          65,
          30,
          26,
          193,
          121,
          241,
          28,
          131,
          87,
          252,
          159,
          138,
          106,
          31,
          90,
          151,
          177,
          190,
          209,
          154,
          129,
          194,
        ],
        "type": "Buffer",
      },
      "license": "cc-by",
      "like": Object {
        "count": 20,
      },
      "tags": Array [
        Object {
          "name": "fruit",
        },
        Object {
          "name": "jackfruit",
        },
      ],
      "updatedAt": "2018-06-20T02:10:00.000Z",
      "url": "http://localhost:8080/ipfs/QmY8LScyCqYd1cQCvEfuBjn5oxNLu4n3dk3YqR8w54UTHP",
      "user": Object {
        "displayName": "Pooya",
        "likecoinId": "likecoin_id_2",
      },
      "wallet": "address 2",
      "width": 200,
    },
    Object {
      "createdAt": "2018-06-20T02:20:00.000Z",
      "description": "peach",
      "fingerprint": Object {
        "data": Array [
          16,
          84,
          153,
          102,
          67,
          107,
          108,
          78,
          147,
          162,
          241,
          44,
          133,
          243,
          26,
          104,
          43,
          71,
          236,
          60,
          184,
          68,
          115,
          158,
          232,
          72,
          96,
          114,
          224,
          132,
          157,
          190,
        ],
        "type": "Buffer",
      },
      "height": 200,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          180,
          235,
          210,
          232,
          130,
          119,
          46,
          199,
          239,
          78,
          40,
          50,
          199,
          144,
          227,
          225,
          105,
          227,
          74,
          91,
          44,
          144,
          193,
          3,
          68,
          246,
          169,
          218,
          248,
          131,
          169,
          159,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          83,
          220,
          162,
          37,
          209,
          156,
          70,
          92,
          225,
          20,
          7,
          35,
          22,
          112,
          40,
          22,
          84,
          67,
          104,
          133,
          183,
          192,
          98,
          83,
          231,
          20,
          65,
          241,
          56,
          67,
          16,
          209,
        ],
        "type": "Buffer",
      },
      "license": "cc-by-sa",
      "like": Object {
        "count": 10,
      },
      "tags": Array [
        Object {
          "name": "fruit",
        },
      ],
      "updatedAt": "2018-06-20T02:20:00.000Z",
      "url": "http://localhost:8080/ipfs/QmaWtfAyAgMy1gXiKTKUFfZpvDTmgDh8yCij5x6EL2nWX8",
      "user": Object {
        "displayName": "Sébastien",
        "likecoinId": "likecoin_id_3",
      },
      "wallet": "address 3",
      "width": 200,
    },
    Object {
      "createdAt": "2018-06-20T01:30:00.000Z",
      "description": "kiwifruit",
      "fingerprint": Object {
        "data": Array [
          179,
          69,
          203,
          194,
          57,
          254,
          176,
          17,
          251,
          36,
          100,
          11,
          117,
          219,
          55,
          228,
          163,
          41,
          247,
          72,
          95,
          93,
          83,
          49,
          195,
          254,
          219,
          189,
          116,
          181,
          72,
          100,
        ],
        "type": "Buffer",
      },
      "height": 200,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          109,
          192,
          144,
          128,
          230,
          178,
          234,
          151,
          149,
          68,
          65,
          122,
          192,
          4,
          30,
          28,
          162,
          239,
          106,
          21,
          154,
          69,
          47,
          177,
          158,
          163,
          82,
          32,
          240,
          176,
          255,
          78,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          207,
          80,
          159,
          43,
          30,
          46,
          253,
          24,
          193,
          4,
          108,
          13,
          98,
          236,
          49,
          140,
          72,
          133,
          65,
          37,
          80,
          127,
          114,
          141,
          67,
          230,
          244,
          178,
          34,
          230,
          204,
          14,
        ],
        "type": "Buffer",
      },
      "license": "cc-by",
      "like": Object {
        "count": 10,
      },
      "tags": Array [
        Object {
          "name": "fruit",
        },
      ],
      "updatedAt": "2018-06-20T01:30:00.000Z",
      "url": "http://localhost:8080/ipfs/QmVj5TG7RbzgVEgEuECoqZ1cucvYwPasy6YduAs2Shmsv5",
      "user": Object {
        "displayName": "Alexandre",
        "likecoinId": "likecoin_id_1",
      },
      "wallet": "address 1",
      "width": 150,
    },
    Object {
      "createdAt": "2018-06-20T02:30:00.000Z",
      "description": "quince",
      "fingerprint": Object {
        "data": Array [
          188,
          159,
          40,
          59,
          150,
          56,
          80,
          11,
          183,
          87,
          94,
          10,
          60,
          50,
          180,
          199,
          239,
          237,
          140,
          210,
          231,
          212,
          138,
          163,
          38,
          207,
          53,
          100,
          19,
          9,
          250,
          206,
        ],
        "type": "Buffer",
      },
      "height": 200,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          113,
          57,
          59,
          142,
          16,
          42,
          105,
          100,
          181,
          129,
          162,
          23,
          190,
          156,
          38,
          194,
          108,
          225,
          38,
          221,
          143,
          244,
          75,
          21,
          196,
          93,
          243,
          255,
          17,
          242,
          78,
          170,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          237,
          2,
          133,
          191,
          172,
          161,
          2,
          48,
          9,
          178,
          113,
          124,
          54,
          50,
          14,
          230,
          78,
          172,
          4,
          41,
          158,
          164,
          158,
          63,
          193,
          69,
          195,
          242,
          218,
          230,
          107,
          53,
          251,
        ],
        "type": "Buffer",
      },
      "license": "cc-by-nd",
      "like": Object {
        "count": 0,
      },
      "tags": Array [
        Object {
          "name": "fruit",
        },
      ],
      "updatedAt": "2018-06-20T02:30:00.000Z",
      "url": "http://localhost:8080/ipfs/QmVxdPw8fWf43cSgF1TMYct5GfDG31bGsE7ukyyRu5qPQV",
      "user": Object {
        "displayName": "Alexandre",
        "likecoinId": "likecoin_id_1",
      },
      "wallet": "address 1",
      "width": 200,
    },
    Object {
      "createdAt": "2018-06-20T02:00:00.000Z",
      "description": "nectarine",
      "fingerprint": Object {
        "data": Array [
          58,
          15,
          5,
          79,
          234,
          224,
          176,
          79,
          81,
          199,
          184,
          53,
          17,
          236,
          242,
          203,
          191,
          129,
          236,
          139,
          168,
          93,
          254,
          246,
          240,
          7,
          81,
          203,
          240,
          205,
          159,
          61,
        ],
        "type": "Buffer",
      },
      "height": 200,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          0,
          92,
          87,
          66,
          242,
          134,
          250,
          54,
          161,
          117,
          152,
          8,
          131,
          155,
          31,
          105,
          167,
          206,
          110,
          216,
          207,
          59,
          0,
          182,
          236,
          168,
          209,
          154,
          77,
          167,
          195,
          142,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          37,
          28,
          92,
          26,
          48,
          91,
          110,
          17,
          32,
          232,
          10,
          74,
          25,
          235,
          51,
          252,
          237,
          189,
          161,
          254,
          70,
          93,
          50,
          191,
          115,
          75,
          108,
          98,
          206,
          3,
          92,
          254,
        ],
        "type": "Buffer",
      },
      "license": "cc0",
      "like": Object {
        "count": 0,
      },
      "tags": Array [
        Object {
          "name": "fruit",
        },
      ],
      "updatedAt": "2018-06-20T02:00:00.000Z",
      "url": "http://localhost:8080/ipfs/QmNN4Nn1tm1bBHGCv444SxFZaGKV7vBGCsgaR41UgrPDFK",
      "user": Object {
        "displayName": "Alexandre",
        "likecoinId": "likecoin_id_1",
      },
      "wallet": "address 1",
      "width": 200,
    },
  ],
  "error": false,
  "pageInfo": Object {
    "endCursor": "eyJvZmZzZXQiOjE1LCJxIjoiI2ZydWl0In0",
    "hasNextPage": true,
    "hasPrevPage": false,
    "next": "http://0.0.0.0:3000/api/search?q=%23fruit&after=eyJvZmZzZXQiOjE1LCJxIjoiI2ZydWl0In0",
    "prev": null,
    "startCursor": null,
    "totalCount": 18,
  },
}
`;

exports[`search with user 1`] = `
Object {
  "data": Array [
    Object {
      "createdAt": "2018-06-20T01:00:00.000Z",
      "description": "grape",
      "fingerprint": Object {
        "data": Array [
          64,
          197,
          223,
          251,
          203,
          122,
          42,
          53,
          66,
          48,
          3,
          28,
          119,
          115,
          247,
          72,
          160,
          25,
          117,
          142,
          240,
          37,
          151,
          182,
          168,
          252,
          109,
          71,
          170,
          248,
          110,
          37,
        ],
        "type": "Buffer",
      },
      "height": 200,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          30,
          56,
          156,
          118,
          255,
          235,
          77,
          148,
          250,
          112,
          187,
          231,
          195,
          233,
          29,
          33,
          30,
          38,
          225,
          99,
          135,
          155,
          206,
          109,
          178,
          143,
          230,
          252,
          251,
          122,
          134,
          171,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          91,
          147,
          147,
          78,
          9,
          42,
          95,
          218,
          69,
          155,
          227,
          189,
          242,
          41,
          187,
          207,
          18,
          34,
          132,
          136,
          244,
          242,
          117,
          114,
          184,
          65,
          244,
          76,
          207,
          137,
          103,
          114,
        ],
        "type": "Buffer",
      },
      "license": "cc-by-sa",
      "like": Object {
        "count": 40,
      },
      "tags": Array [
        Object {
          "name": "lychee",
        },
        Object {
          "name": "fruit",
        },
      ],
      "updatedAt": "2018-06-20T01:00:00.000Z",
      "url": "http://localhost:8080/ipfs/QmQNd1Q8zXEogjWdzLYzKjhKViBJ9aTAun4WaALCto5Bai",
      "user": Object {
        "displayName": "Alexandre",
        "likecoinId": "likecoin_id_1",
      },
      "wallet": "address 1",
      "width": 150,
    },
    Object {
      "createdAt": "2018-06-20T00:30:00.000Z",
      "description": "dragonfruit",
      "fingerprint": Object {
        "data": Array [
          181,
          51,
          34,
          207,
          92,
          157,
          148,
          111,
          207,
          121,
          110,
          54,
          202,
          90,
          140,
          63,
          146,
          18,
          65,
          204,
          14,
          52,
          86,
          92,
          20,
          113,
          215,
          172,
          20,
          36,
          3,
          175,
        ],
        "type": "Buffer",
      },
      "height": 150,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          175,
          160,
          108,
          75,
          20,
          216,
          166,
          134,
          156,
          11,
          157,
          117,
          7,
          241,
          69,
          52,
          144,
          230,
          235,
          169,
          69,
          82,
          30,
          143,
          114,
          89,
          101,
          39,
          88,
          13,
          156,
          23,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          60,
          237,
          70,
          20,
          238,
          200,
          103,
          143,
          212,
          172,
          131,
          192,
          124,
          196,
          47,
          23,
          191,
          127,
          126,
          144,
          113,
          58,
          25,
          237,
          159,
          29,
          75,
          143,
          239,
          183,
          23,
          69,
        ],
        "type": "Buffer",
      },
      "license": "cc-by-nd",
      "like": Object {
        "count": 40,
      },
      "tags": Array [
        Object {
          "name": "fruit",
        },
        Object {
          "name": "raspberry",
        },
      ],
      "updatedAt": "2018-06-20T00:30:00.000Z",
      "url": "http://localhost:8080/ipfs/QmaADwDYHmkJrYcPyVF3YWFkuwYWB1VyhEtdefn1TpHowt",
      "user": Object {
        "displayName": "Alexandre",
        "likecoinId": "likecoin_id_1",
      },
      "wallet": "address 1",
      "width": 200,
    },
    Object {
      "createdAt": "2018-06-20T01:30:00.000Z",
      "description": "kiwifruit",
      "fingerprint": Object {
        "data": Array [
          179,
          69,
          203,
          194,
          57,
          254,
          176,
          17,
          251,
          36,
          100,
          11,
          117,
          219,
          55,
          228,
          163,
          41,
          247,
          72,
          95,
          93,
          83,
          49,
          195,
          254,
          219,
          189,
          116,
          181,
          72,
          100,
        ],
        "type": "Buffer",
      },
      "height": 200,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          109,
          192,
          144,
          128,
          230,
          178,
          234,
          151,
          149,
          68,
          65,
          122,
          192,
          4,
          30,
          28,
          162,
          239,
          106,
          21,
          154,
          69,
          47,
          177,
          158,
          163,
          82,
          32,
          240,
          176,
          255,
          78,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          207,
          80,
          159,
          43,
          30,
          46,
          253,
          24,
          193,
          4,
          108,
          13,
          98,
          236,
          49,
          140,
          72,
          133,
          65,
          37,
          80,
          127,
          114,
          141,
          67,
          230,
          244,
          178,
          34,
          230,
          204,
          14,
        ],
        "type": "Buffer",
      },
      "license": "cc-by",
      "like": Object {
        "count": 10,
      },
      "tags": Array [
        Object {
          "name": "orange",
        },
        Object {
          "name": "fruit",
        },
      ],
      "updatedAt": "2018-06-20T01:30:00.000Z",
      "url": "http://localhost:8080/ipfs/QmVj5TG7RbzgVEgEuECoqZ1cucvYwPasy6YduAs2Shmsv5",
      "user": Object {
        "displayName": "Alexandre",
        "likecoinId": "likecoin_id_1",
      },
      "wallet": "address 1",
      "width": 150,
    },
    Object {
      "createdAt": "2018-06-20T02:30:00.000Z",
      "description": "quince",
      "fingerprint": Object {
        "data": Array [
          188,
          159,
          40,
          59,
          150,
          56,
          80,
          11,
          183,
          87,
          94,
          10,
          60,
          50,
          180,
          199,
          239,
          237,
          140,
          210,
          231,
          212,
          138,
          163,
          38,
          207,
          53,
          100,
          19,
          9,
          250,
          206,
        ],
        "type": "Buffer",
      },
      "height": 200,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          113,
          57,
          59,
          142,
          16,
          42,
          105,
          100,
          181,
          129,
          162,
          23,
          190,
          156,
          38,
          194,
          108,
          225,
          38,
          221,
          143,
          244,
          75,
          21,
          196,
          93,
          243,
          255,
          17,
          242,
          78,
          170,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          237,
          2,
          133,
          191,
          172,
          161,
          2,
          48,
          9,
          178,
          113,
          124,
          54,
          50,
          14,
          230,
          78,
          172,
          4,
          41,
          158,
          164,
          158,
          63,
          193,
          69,
          195,
          242,
          218,
          230,
          107,
          53,
          251,
        ],
        "type": "Buffer",
      },
      "license": "cc-by-nd",
      "like": Object {
        "count": 0,
      },
      "tags": Array [
        Object {
          "name": "fruit",
        },
        Object {
          "name": "grape",
        },
      ],
      "updatedAt": "2018-06-20T02:30:00.000Z",
      "url": "http://localhost:8080/ipfs/QmVxdPw8fWf43cSgF1TMYct5GfDG31bGsE7ukyyRu5qPQV",
      "user": Object {
        "displayName": "Alexandre",
        "likecoinId": "likecoin_id_1",
      },
      "wallet": "address 1",
      "width": 200,
    },
    Object {
      "createdAt": "2018-06-20T02:00:00.000Z",
      "description": "nectarine",
      "fingerprint": Object {
        "data": Array [
          58,
          15,
          5,
          79,
          234,
          224,
          176,
          79,
          81,
          199,
          184,
          53,
          17,
          236,
          242,
          203,
          191,
          129,
          236,
          139,
          168,
          93,
          254,
          246,
          240,
          7,
          81,
          203,
          240,
          205,
          159,
          61,
        ],
        "type": "Buffer",
      },
      "height": 200,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          0,
          92,
          87,
          66,
          242,
          134,
          250,
          54,
          161,
          117,
          152,
          8,
          131,
          155,
          31,
          105,
          167,
          206,
          110,
          216,
          207,
          59,
          0,
          182,
          236,
          168,
          209,
          154,
          77,
          167,
          195,
          142,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          37,
          28,
          92,
          26,
          48,
          91,
          110,
          17,
          32,
          232,
          10,
          74,
          25,
          235,
          51,
          252,
          237,
          189,
          161,
          254,
          70,
          93,
          50,
          191,
          115,
          75,
          108,
          98,
          206,
          3,
          92,
          254,
        ],
        "type": "Buffer",
      },
      "license": "cc0",
      "like": Object {
        "count": 0,
      },
      "tags": Array [
        Object {
          "name": "fruit",
        },
        Object {
          "name": "nectarine",
        },
      ],
      "updatedAt": "2018-06-20T02:00:00.000Z",
      "url": "http://localhost:8080/ipfs/QmNN4Nn1tm1bBHGCv444SxFZaGKV7vBGCsgaR41UgrPDFK",
      "user": Object {
        "displayName": "Alexandre",
        "likecoinId": "likecoin_id_1",
      },
      "wallet": "address 1",
      "width": 200,
    },
    Object {
      "createdAt": "2018-06-20T00:00:00.000Z",
      "description": "avocado",
      "fingerprint": Object {
        "data": Array [
          35,
          122,
          66,
          155,
          220,
          197,
          105,
          47,
          136,
          135,
          201,
          47,
          134,
          152,
          229,
          18,
          143,
          194,
          139,
          71,
          141,
          188,
          160,
          57,
          94,
          212,
          87,
          195,
          244,
          84,
          148,
          134,
        ],
        "type": "Buffer",
      },
      "height": 150,
      "ipfs": Object {
        "data": Array [
          18,
          32,
          249,
          83,
          215,
          220,
          151,
          195,
          86,
          134,
          174,
          153,
          52,
          218,
          148,
          108,
          207,
          215,
          193,
          12,
          176,
          223,
          156,
          40,
          136,
          84,
          176,
          229,
          113,
          203,
          60,
          11,
          227,
          17,
        ],
        "type": "Buffer",
      },
      "ipld": Object {
        "data": Array [
          130,
          221,
          253,
          236,
          238,
          23,
          106,
          29,
          179,
          135,
          73,
          46,
          61,
          176,
          137,
          202,
          222,
          163,
          184,
          226,
          250,
          81,
          40,
          39,
          22,
          245,
          81,
          65,
          99,
          15,
          147,
          143,
          177,
          24,
          160,
          60,
        ],
        "type": "Buffer",
      },
      "license": "cc0",
      "like": Object {
        "count": 0,
      },
      "tags": Array [
        Object {
          "name": "berry",
        },
        Object {
          "name": "fruit",
        },
        Object {
          "name": "avocado",
        },
      ],
      "updatedAt": "2018-06-20T00:00:00.000Z",
      "url": "http://localhost:8080/ipfs/Qmf7vNrdmATNyVsHc2znm8udUmkXij9sHEXDf8VKXFGzME",
      "user": Object {
        "displayName": "Alexandre",
        "likecoinId": "likecoin_id_1",
      },
      "wallet": "address 1",
      "width": 200,
    },
  ],
  "error": false,
  "pageInfo": Object {
    "endCursor": null,
    "hasNextPage": false,
    "hasPrevPage": false,
    "next": null,
    "prev": null,
    "startCursor": null,
    "totalCount": 6,
  },
}
`;
